# candecode

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  buf.gen.yaml  buf.yaml  go.mod  go.sum  main.py  pyproject.toml
app/convert/: cmd.go
cmd/: main.go
cmd/candecode/: main.go
pkg/can/: decoder.go  frame.go
pkg/dbc/: adapter.go  compile.go  decoder.go  parser.go
pkg/mcap/: converter.go  writer.go
pkg/pcapng/: reader.go
pkg/proto/: dbc.pb.go  dbc.proto
pkg/protolint/: linter.go
template/: dbc_to_proto.tmpl
