[project]
name = "candecode"
version = "0.1.0"
description = "Convert CAN data captured with pcanpng to MCAP using a DBC file."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["opendbc"]


[project.scripts]


[tool.uv]
override-dependencies = ["opendbc"]


[tool.uv.sources]
opendbc = { path = "third_party/opendbc", editable = true }
